--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@svgr/webpack": "^6.2.1",
     "next": "12.1.4",
     "react": "18.0.0",
+    "react-codemirror2": "^7.2.1",
     "react-dom": "18.0.0"
   },
   "devDependencies": {
