--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@svgr/webpack": "^6.2.1",
+    "codemirror": "^5.65.3",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-codemirror2": "^7.2.1",
