--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@svgr/webpack": "^6.2.1",
+    "@uiw/react-codemirror": "^4.7.0",
     "codemirror": "^5.65.3",
     "next": "12.1.4",
     "react": "18.0.0",
@@ -20,6 +21,7 @@
     "react-dom": "18.0.0"
   },
   "devDependencies": {
+    "@types/codemirror": "^5.60.5",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
