--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@svgr/webpack": "^6.2.1",
     "@uiw/react-codemirror": "^4.7.0",
+    "browser-or-node": "^2.0.0",
     "codemirror": "^5.65.3",
     "next": "12.1.4",
     "react": "18.0.0",
