--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "browser-or-node": "^2.0.0",
     "codemirror": "^5.65.3",
     "next": "12.1.4",
-    "react": "18.0.0",
+    "react": ">=15.5 <=16.x",
     "react-codemirror2": "^7.2.1",
-    "react-dom": "18.0.0",
+    "react-dom": ">=15.5 <=16.x",
     "react-resize-panel": "^0.3.5",
     "react-split": "^2.0.14",
     "react-split-grid": "^1.0.4",
