--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "codepen-app",
+  "name": "nexcoder-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,32 +9,36 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.9.6",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@prisma/client": "^6.1.0",
     "@svgr/webpack": "^6.2.1",
+    "@types/react": "^19.0.3",
+    "@types/react-dom": "^19.0.2",
     "@uiw/react-codemirror": "^4.7.0",
-    "axios": "^0.27.2",
+    "axios": "^1.7.9",
     "browser-or-node": "^2.0.0",
     "codemirror": "^5.65.3",
-    "next": "12.1.4",
-    "react": ">=15.5 <=16.x",
+    "next": "^15.1.3",
+    "react": "^19.0.0",
     "react-codemirror2": "^7.2.1",
-    "react-dom": ">=15.5 <=16.x",
+    "react-dom": "^19.0.0",
     "react-resize-panel": "^0.3.5",
     "react-split": "^2.0.14",
     "react-split-grid": "^1.0.4",
-    "react-split-pane": "^2.0.3"
+    "react-split-pane": "^0.1.92"
   },
   "devDependencies": {
     "@types/codemirror": "^5.60.5",
-    "@types/node": "17.0.23",
-    "@types/react": "17.0.43",
-    "@types/react-dom": "17.0.14",
+    "@types/node": "^17.0.23",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
+    "prisma": "^6.1.0",
     "sass": "^1.49.11",
-    "typescript": "4.6.3"
+    "tsx": "^4.19.2",
+    "typescript": "5.7.2"
   },
   "engines": {
     "node": ">=18.0.0"
